--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
     "react-masonry-css": "^1.0.16",
