--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "material-ui": "^0.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -21,7 +22,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "uui": "^1.0.7",
-    "web-vitals": "^2.1.4"
+    "validator": "^13.7.0",
+    "web-vitals": "^2.1.4",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
