--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.8.4",
     "@sanity/client": "^3.3.2",
     "@sanity/image-url": "^1.0.1",
