--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,9 @@
     "count-min-sketch": "^0.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6"
+    "http": "^0.0.1-security",
+    "mongoose": "^6.3.6",
+    "socket.io": "^4.5.1",
+    "ws": "^8.8.0"
   }
 }
