--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.1",
     "uui": "^1.0.7",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
