--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "ahocorasick": "^1.0.2",
-    "count-min-sketch": "^0.1.1"
+    "count-min-sketch": "^0.1.1",
+    "node-geocoder": "^4.2.0"
   }
 }
