--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.6"
+  },
+  "devDependencies": {
+    "@types/googlemaps": "^3.43.3"
   }
 }
