--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "count-min-sketch": "^0.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6"
+    "mongoose": "^6.3.6",
+    "node-geocoder": "^4.2.0"
   },
   "devDependencies": {
     "@types/googlemaps": "^3.43.3"
