--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.7",
     "axios": "^0.27.2",
     "blob-to-base64": "^1.0.2",
     "material-ui": "^0.20.2",
